# GAMES101

./: .gitignore
Assignments/0/: CMakeLists.txt  xmake.lua
Assignments/1/: CMakeLists.txt  vcpkg.json
Assignments/1/src/: main.cpp  rasterizer.cpp  rasterizer.hpp
Assignments/2/src/: main.cpp  rasterizer.cpp  rasterizer.hpp
Assignments/3/: build.ps1  xmake.lua
Assignments/3/src/: Texture.hpp  main.cpp  rasterizer.cpp
Assignments/5/src/: Triangle.hpp
Homework0/: CMakeLists.txt
Homework0/src/: main.cpp
Homework1/: CMakeLists.txt  CMakePresets.json
Homework1/src/: Triangle.cpp  Triangle.hpp  main.cpp
Homework1/tools/: build.ps1  build_test.bat
Homework2/: CMakeLists.txt
Homework2/src/: Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Homework3/: CMakeLists.txt  CMakePresets.json  build.ps1
Homework3/src/: Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp  timer.hpp
Homework5/: CMakeLists.txt  test.py
hw/0/src/: main.cpp
hw/1/src/: main.cpp
hw/2/: xmake.lua
hw/2/src/: rasterizer.cpp
hw/3/: run.ps1
hw/3/src/: Texture.hpp  rasterizer.cpp
hw/4/: CMakeLists.txt  xmake.lua
hw/4/src/: main.cpp
hw/5/: binary.ppm  run.py
hw/5/src/: Renderer.cpp  Triangle.hpp
hw/6/: run.py  xmake.lua
hw/6/src/: BVH.cpp  BVH.hpp  Renderer.cpp  Sphere.hpp  Triangle.hpp
hw/7/: CMakeLists.txt  binary_1024.ppm  binary_16.ppm  binary_64.ppm  run.py
hw/7.1/: xmake.lua
hw/7.1/src/: Material.hpp  Renderer.cpp  Scene.cpp  Sphere.hpp  ThreadPool.hpp  Triangle.hpp  Vector.hpp  main.cpp
hw/7/src/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  ThreadPool.hpp  Triangle.hpp  main.cpp
project/cuda_test/: xmake.lua
project/optixMultiGPU/: xmake.lua
project/optixMultiGPU/src/: optixMultiGPU.cpp
